RESOLVED FIXED254282
(REGRESSION 261688@main) Repaint issue when adding text to a textbox
https://bugs.webkit.org/show_bug.cgi?id=254282
Summary (REGRESSION 261688@main) Repaint issue when adding text to a textbox
alan
Reported 2023-03-22 11:35:51 PDT
Attachments
Patch (4.51 KB, patch)
2023-03-22 11:44 PDT, alan
no flags
alan
Comment 1 2023-03-22 11:38:03 PDT
Load a layout test result off of EWS (results.html) Make sure page has scrollable overflow Press the ‘j’ key Press the ‘f’ key Press the ‘j’ key Press the ‘f’ key second item is missing from the bottom pane.
alan
Comment 2 2023-03-22 11:44:32 PDT
EWS
Comment 3 2023-03-22 13:53:59 PDT
Committed 261989@main (359587ba5615): <https://commits.webkit.org/261989@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465545 [details].
Note You need to log in before you can comment on or make changes to this bug.