(REGRESSION 261688@main) Repaint issue when adding text to a textbox https://bugs.webkit.org/show_bug.cgi?id=254282 <rdar://107038111>

Reviewed by Antti Koivisto.

261688@main moved some code from LineLayout over to InlineContentBuilder::build.
However an extra (incorrect) condition got added to the "repaint new content" part. When it is _not_ a partial layout (we simply replace old content)
we don't have a "first damaged line". Prior to 261688@main we did fallback to 0 in case of no damage.

* LayoutTests/fast/repaint/content-change-in-out-of-flow-container-expected.txt: Added.
* LayoutTests/fast/repaint/content-change-in-out-of-flow-container.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentBuilder.cpp:
(WebCore::LayoutIntegration::InlineContentBuilder::build const): (also move repaint after adjustDisplayLines() where we compute line inkOverflow)

Canonical link: https://commits.webkit.org/261989@main